--- a/web/index.html
+++ b/web/index.html
@@ -7,9 +7,9 @@
 
     <title>NREGA Bot: The Ultimate Tool for NREGA Task Automation</title>
     <meta name="description"
-        content="Automate your NREGA tasks with NREGA Bot v2.7.7. Featuring critical bug fixes for the Demand Automation, making renew and upgrade processes seamless. Download now for Windows and macOS.">
+        content="Automate your NREGA tasks with NREGA Bot v2.7.8. Now featuring powerful new tools like MR Fill, MR Tracking, and Dashboard Reports, plus major enhancements to Demand and Wagelist automation.">
     <meta name="keywords"
-        content="NREGA, MGNREGA, automation, FTO Generation, NREGA Bot, Jobcard Verification, MSR processor, wagelist, workcode generator, Palojori, Jharkhand, software, donation, eMB Verify, IF Editor">
+        content="NREGA, MGNREGA, automation, FTO Generation, NREGA Bot, Jobcard Verification, MSR processor, wagelist, workcode generator, Palojori, Jharkhand, software, donation, eMB Verify, IF Editor, MR Fill, MR Tracking">
     <meta name="author" content="Rajat Poddar">
 
     <link rel="icon" href="favicon.ico" type="image/x-icon">
@@ -155,7 +155,7 @@
                 <div class="container mx-auto px-4 sm:px-6 py-3 text-center text-white">
                     <p>
                         <span class="font-bold bg-white text-blue-600 rounded-full px-2 py-0.5 text-xs mr-2">NEW</span>
-                        <strong>Version 2.7.7 is here!</strong> Featuring a new 'Extract from Text' button to speed up your workflow, plus enhanced Demand Automation now with support for Rajasthan!
+                        <strong>Version 2.7.8 is here!</strong> Introducing new automations: <strong>MR Fill</strong>, <strong>MR Tracking</strong>, and <strong>Dashboard Reports</strong>. Plus, Demand Automation now supports GP Logins!
                         <a href="#downloads" class="underline ml-2 hover:text-blue-200">Download Now &rarr;</a>
                     </p>
                 </div>
@@ -173,10 +173,10 @@
                         instantly.</p>
                     <div
                         class="flex flex-col sm:flex-row justify-center items-center space-y-4 sm:space-y-0 sm:space-x-4">
-                        <a href="https://nregabot.com/updates/NREGABot-v2.7.7-Setup.exe"
+                        <a href="https://nregabot.com/updates/NREGABot-v2.7.8-Setup.exe"
                             class="bg-blue-600 text-white font-bold px-6 py-3 rounded-lg hover:bg-blue-700 transition-colors text-lg w-full sm:w-auto dark:bg-blue-500 dark:hover:bg-blue-600">Download
                             for Windows</a>
-                        <a href="https://nregabot.com/updates/NREGABot-v2.7.7-macOS.dmg"
+                        <a href="https://nregabot.com/updates/NREGABot-v2.7.8-macOS.dmg"
                             class="bg-gray-700 text-white font-bold px-6 py-3 rounded-lg hover:bg-gray-800 transition-colors text-lg w-full sm:w-auto dark:bg-gray-600 dark:hover:bg-gray-700">Download
                             for macOS</a>
                     </div>
@@ -397,6 +397,18 @@
                                 with NPCI, with an auto-mode to process all villages in a panchayat.</p>
                         </div>
                         <div class="feature-card bg-white dark:bg-gray-800 p-6 rounded-lg border dark:border-gray-700" data-aos="fade-up" data-aos-delay="700">
+                            <h4>MR Fill</h4>
+                            <p class="text-gray-600 dark:text-gray-400 mt-2">Automatically fill Muster Rolls. Intelligently marks holidays as absent and includes a manual mode for custom attendance.</p>
+                        </div>
+                        <div class="feature-card bg-white dark:bg-gray-800 p-6 rounded-lg border dark:border-gray-700" data-aos="fade-up" data-aos-delay="750">
+                            <h4>MR Tracking</h4>
+                            <p class="text-gray-600 dark:text-gray-400 mt-2">Track Muster Roll status in real-time. Export reports to PDF/Excel/PNG and extract workcodes for other tasks.</p>
+                        </div>
+                        <div class="feature-card bg-white dark:bg-gray-800 p-6 rounded-lg border dark:border-gray-700" data-aos="fade-up" data-aos-delay="800">
+                            <h4>Dashboard Report</h4>
+                            <p class="text-gray-600 dark:text-gray-400 mt-2">Fetch and view comprehensive dashboard reports, with full export capabilities (PDF/Excel/PNG) and a workcode extractor.</p>
+                        </div>
+                        <div class="feature-card bg-white dark:bg-gray-800 p-6 rounded-lg border dark:border-gray-700" data-aos="fade-up" data-aos-delay="850">
                             <h4>Workcode Extractor</h4>
                             <p class="text-gray-600 dark:text-gray-400 mt-2">A handy utility to parse and extract clean
                                 lists of work codes from any block of text.</p>
