--- a/web/versions.html
+++ b/web/versions.html
@@ -59,6 +59,31 @@
 
                     <div
                         class="version-entry bg-white dark:bg-gray-800 p-6 rounded-lg border-2 border-blue-500 dark:border-blue-500 shadow-lg">
+                        <h3 class="text-2xl font-bold text-gray-900 dark:text-white">Version 2.7.8 (NREGA Bot)</h3>
+                        <p class="text-sm text-gray-500 dark:text-gray-400 mt-1">Released: October 31, 2025</p>
+                        <ul class="list-disc list-inside mt-4 space-y-3 text-gray-700 dark:text-gray-300">
+                            <li>✨ <strong>New Feature (Core): MR Fill</strong> - A new automation to automatically fill Muster Rolls. It intelligently marks holidays as absent and includes a manual mode for custom attendance.</li>
+                            <li>✨ <strong>New Feature (Reports): MR Tracking</strong> - Track Muster Roll status in real-time. Includes options to export reports to PDF, Excel, and PNG, plus a workcode extractor.</li>
+                            <li>✨ <strong>New Feature (Reports): Dashboard Report</strong> - A new tool to fetch and view dashboard reports, with full export capabilities (PDF, Excel, PNG) and a workcode extractor.</li>
+                            <li>✨ <strong>New Feature (UI): Sound Effects</strong> - Added audible sound effects for key actions (e.g., automation complete, error). This can be toggled on/off in the settings.</li>
+                            <li>🚀 <strong>Enhancement (Workflow):</strong> A new workflow allows you to send workcodes directly from the <strong>MR Tracking</strong> report to the <strong>eMB Entry</strong> and <strong>MSR Processor</strong> tabs.</li>
+                            <li>🚀 <strong>Enhancement (Workflow):</strong> Send workcodes and panchayat names directly from the <strong>Dashboard Report</strong> to the <strong>MR Fill</strong> automation.</li>
+                            <li>🚀 <strong>Enhancement (Demand):</strong> Demand Automation now automatically adjusts for laborers with 100 mandays and fully supports <strong>GP logins</strong>.</li>
+                            <li>🚀 <strong>Enhancement (Wagelist):</strong> The Wagelist Automation tab now includes an option to <strong>save the generated wagelist as a PDF</strong> document.</li>
+                            <li>🐞 <strong>Bug Fix (ABPS Verify):</strong> Resolved a critical bug where the automation failed to verify multiple laborers registered under the same job card.</li>
+                        </ul>
+                        <div class="mt-6 flex flex-col sm:flex-row gap-4">
+                            <a href="https://nregabot.com/updates/NREGABot-v2.7.8-Setup.exe"
+                                class="bg-blue-600 text-white font-semibold px-5 py-2 rounded-lg hover:bg-blue-700 transition-colors text-center">Download
+                                for Windows</a>
+                            <a href="https://nregabot.com/updates/NREGABot-v2.7.8-macOS.dmg"
+                                class="bg-gray-700 text-white font-semibold px-5 py-2 rounded-lg hover:bg-gray-800 transition-colors text-center">Download
+                                for macOS</a>
+                        </div>
+                    </div>
+
+                    <div
+                        class="version-entry bg-white dark:bg-gray-800 p-6 rounded-lg border dark:border-gray-700 shadow-sm">
                         <h3 class="text-2xl font-bold text-gray-900 dark:text-white">Version 2.7.7 (NREGA Bot)</h3>
                         <p class="text-sm text-gray-500 dark:text-gray-400 mt-1">Released: October 27, 2025</p>
                         <ul class="list-disc list-inside mt-4 space-y-3 text-gray-700 dark:text-gray-300">
